<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SignUp">
    <data>
        <variable
            name="viewModel"
            type="com.example.learnkotlin.fragments.SignUp" />
        <import type="com.example.learnkotlin.R"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAppearance="@style/header_text_style"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimens_50"
            android:layout_width="@dimen/dimens_350"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_name"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAppearance="@style/text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimens_30"
            android:layout_width="@dimen/dimens_350"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/username"
                android:textAppearance="@style/text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimens_30"
            android:layout_width="@dimen/dimens_350"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textAppearance="@style/text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimens_30"
            android:layout_width="@dimen/dimens_350"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textAppearance="@style/text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimens_30"
            android:layout_width="@dimen/dimens_350"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/confirm_passoword"
                android:textAppearance="@style/text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signin_query"
            android:layout_marginTop="@dimen/dimens_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/signin_query"
            android:onClick="@{()-> viewModel.navCon.navigate(R.id.action_signUp_to_signIn)}"
            android:textAppearance="@style/text_style"/>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="@dimen/dimens_50"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:onClick="@{()-> viewModel.signUp()}"/>

    </LinearLayout>
    </ScrollView>
</layout>